--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "knex": "^0.95.7",
+    "mongoose": "^5.13.3",
     "mysql": "^2.18.1",
     "sqlite3": "^5.0.2"
   },
